--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -12,6 +12,22 @@ body {
     overflow: visible;
 }
 
+button {
+    border-style: none;
+    border: none;
+    border-radius: 5px;
+}
+
+button:hover {
+    transition: ease 0.3s;
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+/* -------------- MAIN -------------- */
+
 main {
     display: flex;
     align-items: center;
@@ -41,6 +57,40 @@ main {
     display: flex;
 }
 
+.options-button {
+    margin-top: 10px;
+}
+
+.modal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 80%;
+    width: 35vw;
+    background-color: darkslateblue;
+    position: absolute;
+    left: 8vw;
+    border-radius: 5px;
+    z-index: 1;
+}
+
+.modal form {
+    margin: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.modal input {
+    width: 200px;
+}
+
+.modal button {
+    margin-top: 10px;
+}
+
+/* -------------- ASIDE -------------- */
+
 aside {
     display: flex;
     flex-direction: column;
@@ -65,34 +115,7 @@ aside h3 {
     margin-bottom: 10%;
 }
 
-button {
-    border-style: none;
-    border: none;
-    border-radius: 5px;
-}
-
-button:hover {
-    transition: ease 0.3s;
-}
-
-.hidden {
-    visibility: hidden;
-}
-
-.modal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 60vh;
-    width: 35vw;
-    background-color: darkslateblue;
-    position: absolute;
-    left: 8vw;
-    border-radius: 5px;
-    z-index: 1;
-}
-
-.modal button {
+.modal button, .search-modal button {
     transition: none;
 }
 
@@ -103,10 +126,6 @@ button:hover {
     margin: 5px;
 }
 
-.modal h3 {
-    margin-top: 5%;
-}
-
 .search-modal {
     display: flex;
     flex-direction: column;
@@ -114,13 +133,10 @@ button:hover {
     position: absolute;
     right: 10vw;
     top: 30vh;
-    background-color: red;
+    background-color: lightseagreen;
     height: 40vh;
     width: 30vw;
     z-index: 1;
 }
 
-.search-modal button {
-    transition: none;
-}
 
